# ghcjs-base

./: .gitignore  Makefile  README.md  cabal.project  default.nix  flake.nix  ghcjs-base-alt.cabal  ghcjs-base.cabal  shell.nix
.github/workflows/: ghcjs-base.yml  main.yml
Data/: JSString.hs
Data/JSString/: Int.hs  Internal.hs  Raw.hs  Read.hs  RealFloat.hs  RegExp.hs  Text.hs
Data/JSString/Internal/: Fusion.hs  Search.hs  Type.hs
Data/JSString/Internal/Fusion/: Common.hs
GHCJS/: Buffer.hs  Concurrent.hs  Foreign.hs  Marshal.hs  Nullable.hs  Types.hs
GHCJS/Buffer/: Types.hs
GHCJS/Foreign/: Callback.hs  Export.hs  Internal.hs
GHCJS/Foreign/Callback/: Internal.hs  ToArrayCallback.hs  Variadic.hs
GHCJS/Internal/: Types.hs
GHCJS/Marshal/: Internal.hs  List.hs  Maybe.hs  Pure.hs
GHCJS/Types/: Internal.hs
JavaScript/: Array.hs  Boolean.hs  Cast.hs  Number.hs  Object.hs  String.hs  TypedArray.hs
JavaScript/Array/: Immutable.hs  Internal.hs  ST.hs
JavaScript/JSON/Types/: Generic.hs  Instances.hs  Internal.hs
JavaScript/Object/: Internal.hs
JavaScript/TypedArray/: DataView.hs  IO.hs  Internal.hs  ST.hs  Types.hs
JavaScript/TypedArray/ArrayBuffer/: Internal.hs
JavaScript/TypedArray/DataView/: Internal.hs  ST.hs
JavaScript/TypedArray/Internal/: Types.hs
JavaScript/Web/: AnimationFrame.hs  Canvas.hs  CloseEvent.hs  ErrorEvent.hs  Location.hs  MessageEvent.hs  Performance.hs  Storage.hs  StorageEvent.hs  WebSocket.hs  Worker.hs  XMLHttpRequest.hs
JavaScript/Web/Blob/: Internal.hs
JavaScript/Web/Canvas/: ImageData.hs  Internal.hs  Pattern.hs
JavaScript/Web/CloseEvent/: Internal.hs
JavaScript/Web/ErrorEvent/: Internal.hs
JavaScript/Web/MessageEvent/: Internal.hs
JavaScript/Web/Storage/: Internal.hs
jsbits/: animationFrame.js  array.js  buffer.js  callback.js  export.js  foreign.js  json.js  jsstring.js  jsstringRaw.js  string.js  text.js  utils.js  websocket.js  xhr.js
jsbits-old/: object.js
nix/: hix.nix  readme.md  sources.json
src-js/Data/JSString/: Raw.hs  Read.hs  RegExp.hs  Text.hs
src-js/Data/JSString/Internal/: Fusion.hs  Type.hs
src-js/GHCJS/: Nullable.hs
src-js/GHCJS/Foreign/: Export.hs
src-js/JavaScript/: Array.hs
src-js/JavaScript/JSON/Types/: Instances.hs
src-js/JavaScript/Web/: AnimationFrame.hs  Canvas.hs  File.hs  FileReader.hs  Performance.hs  Worker.hs  XMLHttpRequest.hs
src-js/JavaScript/Web/Canvas/: TextMetrics.hs  Types.hs
src-js/JavaScript/Web/Worker/: Haskell.hs
src-wasm/Data/: JSString.hs
src-wasm/Data/JSString/: Internal.hs  Text.hs
src-wasm/Data/JSString/Internal/: Fusion.hs  Type.hs
src-wasm/GHCJS/: Buffer.hs  Concurrent.hs  Types.hs
src-wasm/GHCJS/Foreign/: Internal.hs
src-wasm/GHCJS/Internal/: Types.hs
src-wasm/GHCJS/Marshal/: Internal.hs  Pure.hs
src-wasm/JavaScript/: Array.hs
src-wasm/JavaScript/Array/: Internal.hs
src-wasm/JavaScript/Object/: Internal.hs
test/: Tests.hs  compat.js
test/Tests/: Buffer.hs  Marshal.hs  Properties.hs  QuickCheckUtils.hs
test/Tests/Properties/: Mul.hs  Numeric.hs
test/client/: LICENSE  Main.hs  ghcjs-base-client-tests.cabal
test/server/: Main.hs  ghcjs-base-test-server.cabal
