
-- documentation, see http://haskell.org/cabal/users-guide/

name:                ghcjs-base
version:             0.1.0.0
synopsis:            base library for GHCJS
-- description:         
homepage:            http://github.com/ghcjs/ghcjs-base
license:             MIT
license-file:        LICENSE
author:              Luite Stegeman
maintainer:          stegeman@gmail.com
-- copyright:           
category:            Web
build-type:          Simple
cabal-version:       >=1.8

library
  ghc-options:     -O
  exposed-modules: GHCJS.Types
                   GHCJS.Foreign
                   GHCJS.Marshal
  build-depends:   base >= 4.7 && < 5,
                   ghc-prim,
                   ghcjs-prim,
                   text >= 0.11 && < 1.2,
                   aeson >= 0.7 && < 0.8,
                   scientific >= 0.2 && < 0.3,
                   vector >= 0.10 && < 0.11,
                   unordered-containers >= 0.2 && < 0.3,
                   attoparsec >= 0.11 && < 0.12,
                   transformers >= 0.3 && < 0.4,
                   primitive >= 0.5 && < 0.6

