name:                ghcjs-base-client-tests
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Luite Stegeman
maintainer:          stegeman@gmail.com
build-type:          Simple
cabal-version:       >=1.10

executable ghcjs-base-client-tests
  main-is:             Main.hs
  other-extensions:    OverloadedStrings
  build-depends:       base           >= 4.7 && < 5,
                       ghcjs-base     >= 0.1.1
  default-language:    Haskell2010
