name:                ghcjs-base-test-server
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Luite Stegeman
maintainer:          stegeman@gmail.com
build-type:          Simple
cabal-version:       >=1.10

executable ghcjs-base-test-server
  main-is:             Main.hs
  other-extensions:    OverloadedStrings
  build-depends:       base           >= 4.7 && < 5,
                       wai            >= 3.0 && < 3.1,
                       wai-app-static >= 3.0 && < 3.1,
                       wai-websockets >= 3.0 && < 3.1,
                       websockets     >= 0.9 && < 0.10,
                       warp           >= 3.0 && < 3.1,
                       text           >= 1.1 && < 1.3
  default-language:    Haskell2010